--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="dimen_10dp">10dp</dimen>
     <dimen name="dimen_24sp">24sp</dimen>
     <dimen name="dimen_16dp">16dp</dimen>
+    <dimen name="dimen_631dp">631dp</dimen>
 </resources>
