完成笔记列表功能。

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -43,6 +43,7 @@
             android:layout_margin="@dimen/dimen_10dp"
             android:background="@null"
             android:textSize="@dimen/dimen_24sp"
+            android:text="内容"
             android:inputType="textNoSuggestions"/>
 
     </LinearLayout>
