--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="dimen_24sp">24sp</dimen>
     <dimen name="dimen_16dp">16dp</dimen>
     <dimen name="dimen_631dp">631dp</dimen>
+    <dimen name="dimen_20sp">20sp</dimen>
 </resources>
