--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -19,7 +19,8 @@
             android:layout_margin="@dimen/dimen_10dp"
             android:background="@null"
             android:hint="@string/Edit_title"
-            android:textSize="@dimen/dimen_16sp" />
+            android:textSize="@dimen/dimen_16sp"
+            android:inputType="textNoSuggestions"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +34,7 @@
                 android:text="时间"
                 android:textSize="@dimen/dimen_16sp"
                 android:layout_margin="@dimen/dimen_10dp"
-                android:inputType="textNoSuggestions"/>
+                />
         </LinearLayout>
 
         <EditText
@@ -43,7 +44,7 @@
             android:layout_margin="@dimen/dimen_10dp"
             android:background="@null"
             android:textSize="@dimen/dimen_24sp"
-            android:text="内容"
+            android:hint="内容"
             android:inputType="textNoSuggestions"/>
 
     </LinearLayout>
